# ChangeLog for dev-python/django-bootstrap3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*django-bootstrap3-4.7.0 (12 Jun 2014)

  12 Jun 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-bootstrap3-4.7.0.ebuild, +metadata.xml:
  Added ebuild for django-bootstrap3