@@ -1,1 +1,2 @@
+DIST django-bootstrap3-4.11.0.tar.gz 32605 SHA256 4cd090df8a8a9f11d598b8579d83be478783cf2c970bf4c8b1c6fcc4d0436b2e SHA512 98e1a81e74dfcf4d9cc28268c6473b660b7cccbee23e00ca4d6adcb4d971236e15e71cb0d7ef3a7c57a800164a43f07d0539ec733b0adb59d70509a21b8f03b9 WHIRLPOOL c61304df37a11011a02f569b11fefcd425cef66bff217895ed3bfae81c732a7ba8fb1781570ae7fab727de130bbcb06aa133e5bb99d806c6e21c03ffd0d7fdac
 DIST django-bootstrap3-4.7.0.tar.gz 30990 SHA256 e8f0924b491cf33f0b5142d7af238da5b4b6ab7b2c28a5e8e0e6e114625e07a2 SHA512 6b4eba20acd745aa8a5155d669aedd0a4316b9bc247f6c7badac7595b5794172e07419dbae59bc6823f4886abbc920cbc4355b8f4e1e1e96df7130ea4ba2454f WHIRLPOOL d99dcd195ff4402c37722b02537ed0b33efb9e2d07e8e0c302d62d9e95741c1f434ad63024c74e36312a8993a67646d0e95ddb8f2e7a2871ed6a0552d5031cdb
