@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-bootstrap3-4.11.0 (12 Oct 2014)
+
+  12 Oct 2014; Johann Schmitz <ercpe@gentoo.org>
+  +django-bootstrap3-4.11.0.ebuild:
+  Versio bump of django-bootstrap3
+
 *django-bootstrap3-4.7.0 (12 Jun 2014)
 
   12 Jun 2014; Johann Schmitz <ercpe@gentoo.org>
